force-app/main/default/objects/Vertrag__c/Vertrag__c.object-meta.xml
<CustomObject>
    <label>Vertrag</label>
    <nameField>
        <displayFormat>V-Nr-{0000}</displayFormat>
        <label>Vertragsnummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verträge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>