force-app/main/default/objects/Vertrag__c/fields/Beratungsleistung__c.field-meta.xml
<CustomField>
    <fullName>Beratungsleistung__c</fullName>
    <label>Beratungsleistung</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>