force-app/main/default/objects/Vertrag__c/fields/Provisionssatz__c.field-meta.xml
<CustomField>
    <fullName>Provisionssatz__c</fullName>
    <label>Provisionssatz</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>