force-app/main/default/objects/Vertrag__c/listViews/Support_Vertrag.listView-meta.xml
<ListView>
    <fullName>Support_Vertrag</fullName>
    <filterScope>Queue</filterScope>
    <label>Support</label>
    <queue>Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>